# logger-abstraction

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: ILogger.h  SpdlogLogger.cpp  SpdlogLogger.h  main.cpp
